--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,13 +1,44 @@
-<br-header
-	signature="Universidade Federal de Uberlândia"
-	title="Sistema de Egressos"
-	subtitle="UFU - Universidade Federal de Uberlândia"
-	container-fluid="true"
-	has-menu
-	has-title-link="true"
-	id="header"
-	title-link-url="/"
-	image="/logos/ufu.png"
->
-	<br-header-action slot="headerAction" has-login label-login="Entrar"></br-header-action>
-</br-header>
+<header class="br-header mb-4" id="header" data-sticky="data-sticky">
+	<div class="container-lg">
+		<div class="header-top">
+			<div class="header-logo">
+				<img class="img-fluid" ngSrc="/logos/ufu_blue.png" alt="Logo UFU" height="335" width="647" />
+				<span class="br-divider vertical"></span>
+				<div class="header-sign">UFU - Universidade Federal de Uberlândia</div>
+			</div>
+			<div class="header-actions">
+				<!--        <div class="header-links dropdown">-->
+				<!--          <button class="br-button circle small" type="button" data-toggle="dropdown" aria-label="Abrir Acesso Rápido">-->
+				<!--            <i class="fas fa-ellipsis-v" aria-hidden="true"></i>-->
+				<!--          </button>-->
+				<!--          <div class="br-list">-->
+				<!--            <a *ngFor="let link of links" class="br-item" [href]="link.href" [target]="link.target">-->
+				<!--              {{ link.name }}-->
+				<!--            </a>-->
+				<!--          </div>-->
+				<!--        </div>-->
+			</div>
+		</div>
+		<div class="header-bottom">
+			<div class="header-menu">
+				<div class="header-menu-trigger" id="header-navigation">
+					<button
+						class="br-button small circle"
+						type="button"
+						aria-label="Menu"
+						data-toggle="menu"
+						data-target="#main-navigation"
+						id="navigation"
+					>
+						<i class="fas fa-bars" aria-hidden="true"></i>
+					</button>
+				</div>
+				<div class="header-info">
+					<div class="header-title">
+						<a href="/"> Sistema de Egressos</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</header>
