--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,1 +1,64 @@
-<br-menu class="mt-2" is-push id="main-navigation" [list]="list"></br-menu>
+<div class="menu-container mt-2">
+	<div class="menu-panel">
+		<div class="menu-header">
+			<div class="menu-close">
+				<button class="br-button circle" type="button" aria-label="Fechar o menu" data-dismiss="menu">
+					<i class="fas fa-times" aria-hidden="true"></i>
+				</button>
+			</div>
+		</div>
+		<nav class="menu-body">
+			@for (lvl1 of list; track $index) {
+				@if (!lvl1.children) {
+					<ng-container [ngTemplateOutlet]="menuItem" [ngTemplateOutletContext]="{ $implicit: lvl1 }"> </ng-container>
+				} @else {
+					<ng-container [ngTemplateOutlet]="menuFolder" [ngTemplateOutletContext]="{ $implicit: lvl1 }"> </ng-container>
+				}
+			}
+		</nav>
+	</div>
+</div>
+
+<ng-template #menuFolder let-item>
+	<div class="menu-folder">
+		<ng-container [ngTemplateOutlet]="menuItem" [ngTemplateOutletContext]="{ $implicit: item }"> </ng-container>
+		@if (item.children) {
+			<ng-container [ngTemplateOutlet]="menuList" [ngTemplateOutletContext]="{ $implicit: item.children }">
+			</ng-container>
+		}
+	</div>
+</ng-template>
+
+<ng-template #menuList let-itemList>
+	<ul>
+		@for (child of itemList; track child.label) {
+			<li [ngClass]="{ 'side-menu': child.children }" *ngFor="let child of itemList">
+				<ng-container [ngTemplateOutlet]="menuItem" [ngTemplateOutletContext]="{ $implicit: child }"></ng-container>
+				<ng-container *ngIf="child.children">
+					<ng-container
+						[ngTemplateOutlet]="menuList"
+						[ngTemplateOutletContext]="{ $implicit: child.children }"
+					></ng-container>
+				</ng-container>
+			</li>
+		}
+	</ul>
+</ng-template>
+
+<ng-template #menuItem let-item>
+	@if (item.url) {
+		<a class="menu-item clickable" [routerLink]="item.url">
+			<span class="icon">
+				<i class="fas" [class]="item.icon" aria-hidden="true"></i>
+			</span>
+			<span class="content">{{ item.label }}</span>
+		</a>
+	} @else {
+		<a class="menu-item">
+			<span class="icon">
+				<i class="fas" [class]="item.icon" aria-hidden="true"></i>
+			</span>
+			<span class="content">{{ item.label }}</span>
+		</a>
+	}
+</ng-template>
