--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+}
+
+body {
+	font-style: normal;
+	font-weight: 400;
+	font-family: 'rawline', sans-serif;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+::-webkit-scrollbar {
+	background-color: #cacaca;
+	width: 8px;
+	border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: transparent;
+	border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #a0a0a0;
+	border-radius: 4px;
+}
