(feat): init component input

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,8 @@
 <p>home works!</p>
 
-<button appButton type="secondary">
+<button br-button type="secondary">
 	<i class="fas fa-user"></i>
 	Teste
 </button>
+
+<app-input feedback="teste" state="danger" hasButton icon="fas fa-user" id="teste" label="Teste"></app-input>
