--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -17,6 +17,14 @@
 				<!--            </a>-->
 				<!--          </div>-->
 				<!--        </div>-->
+				<div class="header-login">
+					<div class="header-sign-in">
+						<button class="br-sign-in small" type="button" data-trigger="login">
+							<i class="fas fa-user" aria-hidden="true"></i><span class="d-sm-inline">Entrar</span>
+						</button>
+					</div>
+					<div class="header-avatar"></div>
+				</div>
 			</div>
 		</div>
 		<div class="header-bottom">
