(feat): first version select

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,3 +21,5 @@
 </app-input>
 
 <app-textarea id="text" [formControl]="inputControl" label="teste" maxLength="300"> </app-textarea>
+
+<app-select multiple label="teste" id="asd" [data]="options"> </app-select>
