--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,10 @@ body {
 	cursor: pointer;
 }
 
+.br-select .br-input .input-icon {
+	margin-top: 4px;
+}
+
 ::-webkit-scrollbar {
 	background-color: #cacaca;
 	width: 8px;
