--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,4 +22,6 @@
 
 <app-textarea id="text" [formControl]="inputControl" label="teste" maxLength="300"> </app-textarea>
 
-<app-select multiple label="teste" id="asd" [data]="options"> </app-select>
+<app-select [formControl]="selectControl" label="teste" id="asd" [data]="options"> </app-select>
+
+<app-multi-select [formControl]="multiSelectControl" label="teste" id="as" [data]="options"> </app-multi-select>
