--- a/src/app/shared/components/multi-select/multi-select.component.html
+++ b/src/app/shared/components/multi-select/multi-select.component.html
@@ -1,4 +1,4 @@
-<div class="br-select" [attr.disabled]="disabled ? '' : null">
+<div class="br-select" multiple [attr.disabled]="disabled ? '' : null">
 	<div class="br-input">
 		<label for="{{ id }}">{{ label }}</label>
 		<input (blur)="onBlur()" autocomplete="off" id="{{ id }}" type="text" [attr.placeholder]="placeholder" class="" />
@@ -7,10 +7,16 @@
 		</button>
 	</div>
 	<div class="br-list" tabindex="0">
+		<div class="br-item highlighted" data-all="data-all" tabindex="-1">
+			<div class="br-checkbox">
+				<input id="{{ id + '-all' }}" name="cbsm" type="checkbox" />
+				<label for="{{ id + '-all' }}">Selecionar Todos</label>
+			</div>
+		</div>
 		@for (option of data; let i = $index; track option.value) {
-			<div class="br-item" [attr.data-value]="option.value" tabindex="-1" (click)="setSelected()">
-				<div class="br-radio">
-					<input id="{{ id + i }}" type="radio" value="{{ option.value }}" />
+			<div class="br-item" tabindex="-1" (click)="setSelected()">
+				<div class="br-checkbox">
+					<input id="{{ id + i }}" type="checkbox" value="{{ option.value }}" />
 					<label for="{{ id + i }}">{{ option.text }}</label>
 				</div>
 			</div>
