--- a/src/app/shared/components/multi-select/multi-select.component.html
+++ b/src/app/shared/components/multi-select/multi-select.component.html
@@ -1,4 +1,4 @@
-<div class="br-select" multiple [attr.disabled]="disabled ? '' : null">
+<div class="br-select mw-100" multiple [attr.disabled]="disabled ? '' : null">
 	<div class="br-input">
 		<label for="{{ id }}">{{ label }}</label>
 		<input (blur)="onBlur()" autocomplete="off" id="{{ id }}" type="text" [attr.placeholder]="placeholder" class="" />
