(feat): create alert service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="template-base">
 	<app-header></app-header>
+	<app-alert></app-alert>
 	<main class="d-flex flex-fill mb-5" id="main">
 		<div class="container-lg">
 			<div class="row">
