--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,22 +23,8 @@ body {
 	cursor: pointer;
 }
 
-p,
-span {
-	color: var(--pure-100, #000);
-	font-size: 16.8px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-}
-
-b,
-strong {
-	color: var(--pure-100, #000);
-	font-size: 24px;
-	font-style: normal;
-	font-weight: 600;
-	line-height: normal;
+.br-message {
+	animation: all ease-in-out 1s;
 }
 
 h1,
