(feat): table component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -36,4 +36,5 @@
 	[formControl]="datePickerControl"
 ></app-date-time-picker>
 
+<app-table [columns]="columns" [data]="data"></app-table>
 <app-paginator length="100" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[10, 20, 30]"></app-paginator>
