(fix): menu redirect

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 main {
-  min-height: calc(100dvh - 148px);
+	min-height: calc(100dvh - 23em);
 }
 
 .alert-container {
-  margin-top: -24px;
-  z-index: 9999;
+	margin-top: -24px;
+	z-index: 9999;
 }
