(feat): new component checkbox

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,5 +37,7 @@
 
 <app-switch [(value)]="checked" label="Teste" hintActive="ativo" hintInactive="inativo" id="testa"></app-switch>
 
+<app-checkbox [(value)]="checked" label="Teste" id="3"></app-checkbox>
+
 <app-table [columns]="columns" [data]="data"></app-table>
 <app-paginator length="100" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[10, 20, 30]"></app-paginator>
