--- a/src/app/shared/components/textarea/textarea.component.html
+++ b/src/app/shared/components/textarea/textarea.component.html
@@ -1,4 +1,4 @@
-<div class="br-textarea" [ngClass]="[size]">
+<div class="br-textarea" [ngClass]="{ size }">
 	<label for="textarea-{{ id }}">
 		{{ label }}
 	</label>
