(feat): collapse item

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,3 +43,7 @@
 
 <app-table [columns]="columns" [data]="data"></app-table>
 <app-paginator length="100" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[10, 20, 30]"></app-paginator>
+
+<app-collapse-item id="collapse-1" label="Bacharel em Sistemas da Informação">
+	<h1>Teste conteúdo</h1>
+</app-collapse-item>
