--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,6 @@
 <p>home works!</p>
 
-<button br-button type="secondary">
-	<i class="fas fa-user"></i>
-	Teste
-</button>
+<button br-button type="secondary">Teste</button>
 
 <app-input
 	[formControl]="inputControl"
