(feat): init page dashboard public & fix bugs

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,6 @@
 <p>home works!</p>
 
-<button br-button type="secondary">Teste</button>
+<button br-button color="secondary">Teste</button>
 
 <!--
 <app-input
