--- a/src/app/shared/components/collapse-item/collapse-item.component.html
+++ b/src/app/shared/components/collapse-item/collapse-item.component.html
@@ -1,5 +1,6 @@
 <cdk-accordion-item
 	#accordionItem="cdkAccordionItem"
+	[expanded]="expanded"
 	class="accordion-item"
 	role="button"
 	tabindex="0"
