--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="br-footer" id="footer">
 	<div class="container-lg">
 		<div class="logo justify-content-center d-flex">
-			<img ngSrc="/logos/ufu_white_hor.png" alt="Logo UFU" height="360" width="694" />
+			<img ngSrc="/logos/ufu_white_hor.png" alt="Logo UFU" height="360" width="694" loading="lazy" />
 		</div>
 	</div>
 	@if (license) {
