--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 				></app-menu>
 				<div class="col mb-5">
 					<app-breadcrumb></app-breadcrumb>
-					<div class="main-content pl-sm-3 mt-4" id="main-content">
+					<div class="main-content pl-sm-3" id="main-content">
 						<router-outlet></router-outlet>
 					</div>
 				</div>
