(feat): remove grid, implement new component card and charts

--- a/src/app/features/public/components/filter/filter.component.html
+++ b/src/app/features/public/components/filter/filter.component.html
@@ -1,4 +1,4 @@
-<app-collapse-item expanded id="filter" label="Filtros" class="mb-3">
+<app-collapse-item expanded id="filter" label="Filtros">
 	<form [formGroup]="formGroupFilter" class="filter-section row mx-0" (ngSubmit)="submit()">
 		<app-select
 			[data]="academicSemesterOptions"
