--- a/src/app/shared/components/collapse-item/collapse-item.component.scss
+++ b/src/app/shared/components/collapse-item/collapse-item.component.scss
@@ -11,6 +11,7 @@
 		font-style: normal;
 		font-weight: 600;
 		line-height: 23.18px;
+		cursor: pointer;
 
 		display: flex;
 		align-items: center;
