--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="menu-container mt-2">
+<div class="menu-container">
 	<div class="menu-panel">
 		<div class="menu-header">
 			<div class="menu-close">
