--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/cdk/overlay-prebuilt.css';
 
 html,
 body {
@@ -44,18 +45,17 @@ h1,
 	line-height: normal;
 }
 
-::-webkit-scrollbar {
-	background-color: #cacaca;
-	width: 8px;
-	border-radius: 4px;
-}
+.cdk-overlay-pane.dialog {
+	display: block;
+	background: #fff;
+	border-radius: 0;
+	padding: 24px 36px;
 
-::-webkit-scrollbar-track {
-	background-color: transparent;
-	border-radius: 4px;
-}
+	i {
+		cursor: pointer;
+	}
 
-::-webkit-scrollbar-thumb {
-	background-color: #a0a0a0;
-	border-radius: 4px;
+	*:focus-visible {
+		outline: none;
+	}
 }
