--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,23 @@
 <app-loading></app-loading>
 <div class="template-base">
-	<app-header></app-header>
+	<app-header [hideNavbar]="hideNavbar()"></app-header>
 	<app-alert></app-alert>
-	<main class="d-flex flex-fill mb-5" id="main">
+	<main class="d-flex flex-fill" id="main">
 		<div class="container-lg">
-			<div class="row">
-				<app-menu
-					class="br-menu push col-xl-2 col-lg-3 col-md-4 col-sm-5 px-0"
-					[class.active]="!isMobile()"
-					id="main-navigation"
-					data-breakpoints="col-xl-2 col-lg-3 col-md-4 col-sm-5"
-				></app-menu>
+			<div class="row h-100">
+				@if (!hideNavbar()) {
+					<app-menu
+						class="br-menu push col-xl-2 col-lg-3 col-md-4 col-sm-5 px-0"
+						[class.active]="!isMobile()"
+						id="main-navigation"
+						data-breakpoints="col-xl-2 col-lg-3 col-md-4 col-sm-5"
+					></app-menu>
+				}
 				<div class="col pt-4 pb-5">
-					<app-breadcrumb></app-breadcrumb>
-					<div class="main-content pl-sm-3" id="main-content">
+					@if (!hideNavbar()) {
+						<app-breadcrumb></app-breadcrumb>
+					}
+					<div [class.pl-sm-3]="!hideNavbar()" class="main-content" id="main-content">
 						<router-outlet></router-outlet>
 					</div>
 				</div>
