--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,46 +7,64 @@
 				<div class="header-sign">UFU - Universidade Federal de Uberlândia</div>
 			</div>
 			<div class="header-actions">
-				<!--        <div class="header-links dropdown">-->
-				<!--          <button class="br-button circle small" type="button" data-toggle="dropdown" aria-label="Abrir Acesso Rápido">-->
-				<!--            <i class="fas fa-ellipsis-v" aria-hidden="true"></i>-->
-				<!--          </button>-->
-				<!--          <div class="br-list">-->
-				<!--            <a *ngFor="let link of links" class="br-item" [href]="link.href" [target]="link.target">-->
-				<!--              {{ link.name }}-->
-				<!--            </a>-->
-				<!--          </div>-->
-				<!--        </div>-->
-				<div class="header-login">
-					<div class="header-sign-in">
-						<button class="br-sign-in small" type="button" data-trigger="login">
-							<i class="fas fa-user" aria-hidden="true"></i><span class="d-sm-inline">Entrar</span>
-						</button>
+				@if (!hideNavbar()) {
+					<div class="header-login">
+						@if (!user()) {
+							<div class="header-sign-in">
+								<button [routerLink]="['/login']" class="br-sign-in small" type="button" data-trigger="login">
+									<i class="fas fa-user" aria-hidden="true"></i><span class="d-sm-inline">Entrar</span>
+								</button>
+							</div>
+						} @else {
+							<div>
+								<button
+									[cdkMenuTriggerFor]="menu"
+									[cdkMenuPosition]="[{ originX: 'end', originY: 'bottom', overlayX: 'end', overlayY: 'top' }]"
+									class="br-sign-in"
+									type="button"
+									aria-label="Olá, {{ user().fullName }}"
+								>
+									<span class="br-avatar" [title]="user().fullName"
+										><span class="content bg-orange-vivid-30 text-pure-0">{{ user().fullName.charAt(0) }}</span></span
+									><span class="ml-2 text-gray-80 text-weight-regular"
+										>Olá, <span class="text-weight-semi-bold">{{ user().fullName.split(' ')[0] }}</span></span
+									><i class="fas fa-caret-down" aria-hidden="true"></i>
+								</button>
+							</div>
+						}
 					</div>
-					<div class="header-avatar"></div>
-				</div>
+				}
 			</div>
 		</div>
 		<div class="header-bottom">
 			<div class="header-menu">
-				<div class="header-menu-trigger" id="header-navigation">
-					<button
-						class="br-button small circle"
-						type="button"
-						aria-label="Menu"
-						data-toggle="menu"
-						data-target="#main-navigation"
-						id="navigation"
-					>
-						<i class="fas fa-bars" aria-hidden="true"></i>
-					</button>
-				</div>
+				@if (!hideNavbar()) {
+					<div class="header-menu-trigger" id="header-navigation">
+						<button
+							class="br-button small circle"
+							type="button"
+							aria-label="Menu"
+							data-toggle="menu"
+							data-target="#main-navigation"
+							id="navigation"
+						>
+							<i class="fas fa-bars" aria-hidden="true"></i>
+						</button>
+					</div>
+				}
 				<div class="header-info">
 					<div class="header-title">
-						<a href="/"> Sistema de Egressos</a>
+						<a [routerLink]="['/']"> Sistema de Egressos</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </header>
+
+<ng-template #menu>
+	<div cdkMenu class="br-list" id="avatar-menu" role="menu">
+		<a cdkMenuItem class="br-item" [routerLink]="['/perfil']" role="menuitem">Perfil</a>
+		<a cdkMenuItem class="br-item" (click)="logout()" role="menuitem">Sair da conta</a>
+	</div>
+</ng-template>
