(feat): home content

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,52 +1,4 @@
-<p>home works!</p>
-
-<button br-button color="secondary">Teste</button>
-
-<!--
-<app-input
-	[formControl]="inputControl"
-	required
-	type="password"
-	id="teste"
-	placeholder="Teste"
-	label="Teste"
-	hasButton
-	icon="fas fa-eye"
->
-	@if (inputControl.invalid && !inputControl.untouched) {
-		<span br-feedback state="danger">Campo obrigatório</span>
-	} @else {
-		<span br-feedback noPropagateState state="info">Teste</span>
-	}
-</app-input>
-
-<app-textarea id="text" [formControl]="inputControl" label="teste" maxLength="300"></app-textarea>
-
-<app-select [formControl]="selectControl" label="teste" id="asd" [data]="options"></app-select>
-
-<app-multi-select [formControl]="multiSelectControl" label="teste" id="as" [data]="options"></app-multi-select>
-
-<app-date-time-picker
-	id="testes"
-	label="data e timer"
-	type="date_time"
-	minDate="20/07/2024"
-	maxDate="30/07/2024"
-	[formControl]="datePickerControl"
-></app-date-time-picker>
-
-<app-switch [(value)]="checked" label="Teste" hintActive="ativo" hintInactive="inativo" id="testa"></app-switch>
-
-<app-checkbox [(value)]="checked" label="Teste" id="3"></app-checkbox>
-
-<app-table [columns]="columns" [data]="data"></app-table>
-<app-paginator length="100" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[10, 20, 30]"></app-paginator>
-
-<app-collapse-item id="collapse-1" label="Bacharel em Sistemas da Informação">
-	<h1>Teste conteúdo</h1>
-</app-collapse-item>
--->
-
-<app-tabs [tabs]="tabs" [(activeTab)]="tabSelected"></app-tabs>
-
-<h1>{{ tabSelected }}</h1>
+<h1>Bem vindo!</h1>
+<p>
+	{{ content }}
+</p>
