--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -17,11 +17,7 @@
 	padding: 4px;
 
 	.br-avatar {
-		span {
-			width: 36px;
-			height: 36px;
-			border-radius: 50%;
-		}
+		--avatar-small: 36px;
 	}
 }
 
