--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
 			<div class="row h-100">
 				@if (!hideNavbar()) {
 					<app-menu
-						class="br-menu push col-xl-2 col-lg-3 col-md-4 col-sm-5 px-0"
-						[class.active]="!isMobile()"
+						class="br-menu push px-0"
+						[ngClass]="{ 'col-xl-2 col-lg-3 col-md-4 col-sm-5 active': !isMobile() && !isPublic() }"
 						id="main-navigation"
 						data-breakpoints="col-xl-2 col-lg-3 col-md-4 col-sm-5"
 					></app-menu>
 				}
-				<div class="col pt-4 pb-5">
+				<div class="col pb-4 pb-lg-5 pt-3 pt-lg-4">
 					@if (!hideNavbar()) {
 						<app-breadcrumb></app-breadcrumb>
 					}
