--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
 	<div class="container-lg">
 		<div class="header-top">
 			<div class="header-logo">
-				<img class="img-fluid" ngSrc="/logos/ufu_blue.png" alt="Logo UFU" height="335" width="647" />
+				<img class="img-fluid" ngSrc="/logos/ufu_blue.png" alt="Logo UFU" height="335" width="647" priority />
 				<span class="br-divider vertical"></span>
 				<div class="header-sign">UFU - Universidade Federal de Uberlândia</div>
 			</div>
