(feat): profile view page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,8 @@ body {
 	font-style: normal;
 	font-weight: 400;
 	font-family: 'rawline', sans-serif;
+	font-variant-numeric: lining-nums proportional-nums;
+	font-size: 14px;
 }
 
 * {
@@ -26,23 +28,6 @@ body {
 
 .br-message {
 	animation: all ease-in-out 1s;
-}
-
-h1,
-.title {
-	color: var(--pure-100, #000);
-	font-size: 41.8px;
-	font-style: normal;
-	font-weight: 300;
-	line-height: normal;
-}
-
-.subtitle {
-	color: var(--gray-70, #555);
-	font-size: 14px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
 }
 
 .cdk-overlay-pane.dialog {
