(feat): profile edit and title

--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div id="btn-edit-profile">
-	<button br-button color="secondary" icon="fa-edit">Editar Informações</button>
+	<button [routerLink]="['/perfil/editar']" br-button color="secondary" icon="fa-edit">Editar Informações</button>
 </div>
 <h1>Informações Pessoais</h1>
 <div class="row">
@@ -36,5 +36,5 @@
 	</div>
 </div>
 <div id="btn-edit-profile-mobile">
-	<button br-button size="large" color="secondary">Editar informações</button>
+	<button [routerLink]="['/perfil/editar']" br-button size="large" color="secondary">Editar informações</button>
 </div>
