--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,22 @@ body {
 	animation: all ease-in-out 1s;
 }
 
+.bg-gray {
+	background-color: var(--gray-2, #f8f8f8);
+}
+
+.form-edit {
+	padding: 40px;
+	background-color: var(--gray-2, #f8f8f8);
+	display: flex;
+	flex-direction: column;
+	row-gap: 24px;
+
+	@media (max-width: 768px) {
+		padding: 12px;
+	}
+}
+
 .cdk-overlay-pane.dialog {
 	display: block;
 	background: #fff;
