--- a/src/app/features/profile/pages/profile-edit/profile-edit.component.html
+++ b/src/app/features/profile/pages/profile-edit/profile-edit.component.html
@@ -45,7 +45,7 @@
 		<div class="col-12 col-lg-3">
 			<app-input id="linkedinLink" label="Link do LinkedIn" formControlName="linkedinLink"></app-input>
 		</div>
-		<div class="col-12 col-lg-3 d-flex align-items-end justify-content-end">
+		<div class="col-12 col-lg-3 d-flex align-items-end justify-content-lg-end justify-content-center mt-4 mt-md-0">
 			<button br-button color="primary">Salvar</button>
 		</div>
 	</div>
