--- a/src/app/shared/components/item-info/item-info.component.scss
+++ b/src/app/shared/components/item-info/item-info.component.scss
@@ -3,7 +3,11 @@
 	flex-direction: column;
 	align-items: flex-start;
 	color: var(--gray-80, #333);
-  margin-bottom: 24px;
+	margin-bottom: 16px;
+
+	@media (min-width: 768px) {
+		margin-bottom: 24px;
+	}
 
 	b {
 		font-size: 14px;
@@ -17,6 +21,6 @@
 		font-size: 16.8px;
 		font-style: normal;
 		font-weight: 400;
-    line-height: normal;
+		line-height: normal;
 	}
 }
