--- a/src/app/features/graduates/academic-information/academic-information.component.html
+++ b/src/app/features/graduates/academic-information/academic-information.component.html
@@ -7,7 +7,7 @@
 		<div class="btn-edit">
 			<button
 				size="small"
-				[routerLink]="['/informacoes/academicas/novo']"
+				[routerLink]="['/informacoes/academicas/editar/', history.id]"
 				br-button
 				color="secondary"
 				icon="fa-edit"
