--- a/src/app/shared/components/select/select.component.html
+++ b/src/app/shared/components/select/select.component.html
@@ -7,7 +7,7 @@
 		</button>
 	</div>
 	<div class="br-list" tabindex="0">
-		@for (option of data; let i = $index; track option.value) {
+		@for (option of options; let i = $index; track option.value) {
 			<div class="br-item" [attr.data-value]="option.value" tabindex="-1" (click)="setSelected()">
 				<div class="br-radio">
 					<input id="{{ id + i }}" type="radio" value="{{ option.value }}" />
