--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,15 @@ body {
 	box-sizing: border-box;
 }
 
+.subtitle {
+	color: var(--gray-70, #555);
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	margin-bottom: 0;
+}
+
 .clickable {
 	cursor: pointer;
 }
